# FHSWF-deep-learning

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  llms.yml  main.py  models.yml  pyproject.toml  settings.toml
backend/: .gitignore  llm_service.py  pyproject.toml  schemas.py  service.py  store_service.py
backend/causal_models/: factory.py  models.py  settings.py
backend/file_handling/: chunker.py  extractors.py  service.py
backend/models/: causal_model.py  retriever_model.py  service.py
backend/prompts/: prompt_manager.py
backend/prompts/templates/: language_prompt.j2  multimodal_prompt.j2
backend/rag/: models.py  utils.py
backend/retriever/: dense_retriever.py  factory.py  retriever_base.py  sparse_retriever.py
backend/src/multimodal_rag/: api.py  main.py
backend/storage/: chromadb.py  factory.py  lancedb.py  store_base.py  vector_store.py
backend/tests/: test_utils.py
backend/training-scripts/: causal_language_modeling.py
frontend/: chat.py  file_upload.py  gradio_frontend.py  package-lock.json  package.json
frontend/src/: App.tsx
notebooks/: Investigation-on-idefics2.ipynb  content_extraction.ipynb  evaluation.ipynb  evaluation_artificial_dataset.ipynb  final-results.ipynb  multimodal_embeddings.ipynb  prompt_template.ipynb  results.csv
notebooks/prompt_templates/: judge_prompt.j2  language_prompt.j2
src/multimodal_rag/: __main__.py  frontend.py  llm.py  llm_config.py  main.py  model_config.py  model_manager.py  models.py  retriever.py  vector_store.py
src/multimodal_rag/.ipynb_checkpoints/: __main__-checkpoint.py
src/multimodal_rag/enums/: file_extentions.py
src/multimodal_rag/file/: file_processor.py
src/multimodal_rag/frontend/: file_upload.py  gradio_frontend.py  settings.py  vector_store.py
src/multimodal_rag/models/: config.py  factories.py  retriever_model.py
src/multimodal_rag/schemas/: files.py  generation_config.py
src/multimodal_rag/services/: file_service.py
src/multimodal_rag/storage/: vector_store.py
